# WatchOut

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
dependencies/dlib/_.git/: config  index  packed-refs
dependencies/dlib/_.git/logs/: HEAD
dependencies/dlib/_.git/objects/pack/: pack-cf985d2613fc417eae6f7d35a7db58c4707b673a.idx
dependencies/dlib/_.git/refs/heads/: master
dependencies/mediapipe/: WORKSPACE
dependencies/mediapipe/mediapipe/examples/desktop/: demo_run_graph_main_gpu.cc  run_graph_main.cc.backup  run_graph_main.cc.backup2  run_graph_main.h  run_graph_main.h.backup
dependencies/mediapipe/mediapipe/tasks/c/vision/gesture_recognizer/: gesture_recognizer.cc
exec/: 시연시나리오.docx  포팅매뉴얼.md
include/: common.hpp  face_parser.hpp  face_recognizer.hpp  gaze_tracking.hpp
lib/: CMakeLists.txt
srcs/: BUILD  iris_tracking_gpu.pbtxt  run_graph_main.cc  run_graph_main.h
watchout/: main.cpp
